--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "eslint -c .eslintrc.json . --ext .tsx --fix",
     "deploy": "npm run build && firebase deploy"
   },
   "eslintConfig": {
@@ -49,6 +50,10 @@
     "eslint-plugin-react": "^7.31.11",
     "prettier": "^2.8.1",
     "sass": "^1.57.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "css-loader": "^6.8.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
