--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "github-markdown-css": "^5.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1"
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
     "lint": "eslint -c .eslintrc.json . --ext .tsx --fix",
     "deploy": "npm run build && firebase deploy"
   },
@@ -43,17 +44,24 @@
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@vitest/coverage-v8": "^3.1.1",
     "babel-eslint": "^10.1.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "jsdom": "^26.1.0",
     "prettier": "^3.3.3",
     "sass": "^1.78.0",
     "typescript": "^4.9.5",
-    "css-loader": "^7.1.2",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "typescript-eslint": "^8.4.0"
+    "typescript-eslint": "^8.4.0",
+    "vite": "^6.3.2",
+    "vitest": "^3.1.1"
   }
 }
